git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@268 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -505,6 +505,9 @@ app:
       identification: Nom et codes du produit
       description: Descriptions
       nature: Type de produit
+      natures:
+        product: Produit
+        service: Service
     products_search:
       title: 'Recherche'
       search: 'Rechercher un produit'
