git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@273 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -168,6 +168,16 @@ models:
       x: Position X
       y: Position Y
       z: Position Z
+  stock_move:
+    name: Mouvement de stock
+    attributes:
+      name: Nom
+      planned_on: Prévu le
+      moved_on: Fait le
+      quantity: Quantité
+      unit_id: Unité
+      product_id: Produit
+      comment: Commentaire
   user:
     name: Utilisateur
     attributes:
