git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@284 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -274,11 +274,11 @@ app:
       title: Écritures
       select: 'Sélectionnez le journal :'
       number_records: 'Nombre de pièces à afficher :'
-      record_number: 'Pièce n°'
+      record_number: 'N°Pièce'
       record_created: 'Enregistrée le'
-      record_printed: 'Reçue le'
+      record_printed: 'Datée au'
       label: 'Libellé'
-      account_number: 'Compte n°'
+      account_number: 'N°Compte'
       record_debit: 'Débit'
       record_credit: 'Crédit'
       entry_letter: 'Lettrage'
