git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@288 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/languages/fr.yml
+++ b/app/languages/fr.yml
@@ -607,6 +607,9 @@ app:
       shelves_create: Ajouter une nouvelle catégorie de produits
     shelves_create:
       title: 'Ajout d''une nouvelle catégorie de produits'
+    shelves_form:
+      general: Dénomination
+      catalog: Description pour catalogue
 
     stocks_locations:
       title: Gérer les stocks
